--- a/index.html
+++ b/index.html
@@ -62,18 +62,23 @@
             </li>
           </ul>
         </address>
+        <button class="open-menu-btn" type="button">
+          <svg width="24" height="24">
+            <use href="./images/icons.svg#icon-icon-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
 
     <main>
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-btn">Order Service</button>
         </div>
-      </section>
+      </section> -->
 
-      <section class="features">
+      <!-- <section class="features">
         <div class="container section-features">
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-ul">
@@ -127,9 +132,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <section class="team">
+      <!-- <section class="team">
         <div class="container section-team">
           <h2 class="team-title">Our Team</h2>
 
@@ -378,9 +383,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <section class="features">
+      <!-- <section class="features">
         <div class="container section-portfolio">
           <h2 class="features-title">Our Portfolio</h2>
           <ul class="portfolio-ul">
@@ -510,10 +515,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container">
         <div class="box-footer-logo">
           <a class="footer-logo" href="./index.html"
@@ -597,9 +602,9 @@
         </div>
 
       </div>
-    </footer>
+    </footer> -->
 
-    <div class="backdrop is-open">
+    <!-- <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg class="modal-close-icon" width="8" height="8">
@@ -693,7 +698,7 @@
           <button class="modal-btn" type="submit">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
 
