--- a/index.html
+++ b/index.html
@@ -27,16 +27,18 @@
   </head>
 
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
           <a href="./index.html" class="header-logo"
             >Web<span class="header-logo-color">Studio</span></a
-          >
+          > -->
+
+
           <!-- <a href="./index.html" class="header-logo">Web<span class="header-logo-color>Studio
           </span></a> -->
 
-          <ul class="header-menu">
+          <!-- <ul class="header-menu">
             <li class="header-menu-list current">
               <a class="header-menu-link current" href="./index.html">Studio</a>
             </li>
@@ -68,7 +70,7 @@
           </svg>
         </button>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <!-- <section class="hero">
@@ -78,7 +80,7 @@
         </div>
       </section> -->
 
-      <!-- <section class="features">
+      <section class="features">
         <div class="container section-features">
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-ul">
@@ -132,7 +134,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- <section class="team">
         <div class="container section-team">
