--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
       </section> -->
 
-      <section class="features">
+      <!-- <section class="features">
         <div class="container section-features">
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-ul">
@@ -134,7 +134,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- <section class="team">
         <div class="container section-team">
@@ -387,7 +387,7 @@
         </div>
       </section> -->
 
-      <!-- <section class="features">
+      <section class="features">
         <div class="container section-portfolio">
           <h2 class="features-title">Our Portfolio</h2>
           <ul class="portfolio-ul">
@@ -408,7 +408,7 @@
               </div>
 
               <div class="app-name">
-                <h3 class="features-subtitle">Banking App</h3>
+                <h3 class="features-subtitle-portf">Banking App</h3>
                 <p class="features-text">App</p>
               </div>
             </li>
@@ -429,7 +429,7 @@
               </div>
 
               <div class="app-name">
-                <h3 class="features-subtitle">Cashless Payment</h3>
+                <h3 class="features-subtitle-portf">Cashless Payment</h3>
                 <p class="features-text">Marketing</p>
               </div>
             </li>
@@ -449,7 +449,7 @@
                 </p>
               </div>
               <div class="app-name">
-                <h3 class="features-subtitle">Meditation App</h3>
+                <h3 class="features-subtitle-portf">Meditation App</h3>
                 <p class="features-text">App</p>
               </div>
             </li>
@@ -470,7 +470,7 @@
               </div>
 
               <div class="app-name">
-                <h3 class="features-subtitle">Taxi Service</h3>
+                <h3 class="features-subtitle-portf">Taxi Service</h3>
                 <p class="features-text">Marketing</p>
               </div>
             </li>
@@ -491,7 +491,7 @@
               </div>
 
               <div class="app-name">
-                <h3 class="features-subtitle">Screen Illustrations</h3>
+                <h3 class="features-subtitle-portf">Screen Illustrations</h3>
                 <p class="features-text">Design</p>
               </div>
             </li>
@@ -511,13 +511,13 @@
                 </p>
               </div>
               <div class="app-name">
-                <h3 class="features-subtitle">Online Courses</h3>
+                <h3 class="features-subtitle-portf">Online Courses</h3>
                 <p class="features-text">Marketing</p>
               </div>
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- <footer class="footer">
