--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
       </section> -->
 
-      <!-- <section class="team">
+      <section class="team">
         <div class="container section-team">
           <h2 class="team-title">Our Team</h2>
 
@@ -385,9 +385,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
-      <section class="features">
+      <!-- <section class="features">
         <div class="container section-portfolio">
           <h2 class="features-title">Our Portfolio</h2>
           <ul class="portfolio-ul">
@@ -517,7 +517,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!-- <footer class="footer">
