--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
     </header>
 
     <main>
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-btn">Order Service</button>
         </div>
-      </section>
+      </section> -->
 
       <section class="features">
         <div class="container section-features">
