--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
       </section>
 
-      <!-- <section class="features">
+      <section class="features">
         <div class="container section-features">
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-ul">
@@ -134,9 +134,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section class="team">
+      <section class="team">
         <div class="container section-team">
           <h2 class="team-title">Our Team</h2>
 
@@ -385,9 +385,9 @@
               </li>
             </ul>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section class="features">
+      <section class="features">
         <div class="container section-portfolio">
           <h2 class="features-title">Our Portfolio</h2>
           <ul class="portfolio-ul">
@@ -517,7 +517,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <footer class="footer">
