--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
   </head>
 
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
           <a href="./index.html" class="header-logo"
             >Web<span class="header-logo-color">Studio</span></a
-          > -->
+          >
 
 
           <!-- <a href="./index.html" class="header-logo">Web<span class="header-logo-color>Studio
           </span></a> -->
 
-          <!-- <ul class="header-menu">
+          <ul class="header-menu">
             <li class="header-menu-list current">
               <a class="header-menu-link current" href="./index.html">Studio</a>
             </li>
@@ -69,7 +69,7 @@
             <use href="./images/icons.svg#icon-icon-menu"></use>
           </svg>
         </button>
-      </div> -->
+      </div>
 
       <div class="mob-menu is-open">
         <button type="button" class="mob-close-btn">
@@ -159,14 +159,14 @@
     </header>
 
     <main>
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-btn">Order Service</button>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section class="features">
+      <section class="features">
         <div class="container section-features">
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-ul">
@@ -220,9 +220,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section class="team">
+      <section class="team">
         <div class="container section-team">
           <h2 class="team-title">Our Team</h2>
 
@@ -487,9 +487,9 @@
               </li>
             </ul>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section class="features">
+      <section class="features">
         <div class="container section-portfolio">
           <h2 class="features-title">Our Portfolio</h2>
           <ul class="portfolio-ul">
@@ -686,10 +686,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-container">
         <div class="box-footer-logo">
           <a class="footer-logo" href="./index.html"
@@ -773,9 +773,9 @@
         </div>
 
       </div>
-    </footer> -->
+    </footer>
 
-    <!-- <div class="backdrop is-open">
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg class="modal-close-icon" width="8" height="8">
@@ -869,7 +869,7 @@
           <button class="modal-btn" type="submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
   </body>
 </html>
 
