without is-open

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </button>
       </div>
 
-      <div class="mob-menu is-open">
+      <div class="mob-menu">
         <button type="button" class="mob-close-btn">
           <svg class="mob-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
@@ -775,7 +775,7 @@
       </div>
     </footer>
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close-btn">
           <svg class="modal-close-icon" width="8" height="8">
