--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                   media="(min-width: 768px)"
                   />
                   <source srcset="./images/port-img-1-mob.jpg 1x, ./images/port-img-1-mob-2x.jpg 2x" 
-                  media="(min-width: 768px)"
+                  media="(min-width: 320px)"
                   />
                   <img
                   class="features-image"
@@ -537,12 +537,12 @@
                   media="(min-width: 768px)"
                   />
                   <source srcset="./images/port-img-2-mob.jpg 1x, ./images/port-img-2-mob-2x.jpg 2x" 
-                  media="(min-width: 768px)"
+                  media="(min-width: 320px)"
                   />
                   <img
                   class="features-image"
                   src="./images/port-img-2.jpg"
-                  alt="Banking App"
+                  alt="Cashless Payment"
                   width="360"
                   height="300"
                 />
@@ -569,12 +569,12 @@
                   media="(min-width: 768px)"
                   />
                   <source srcset="./images/port-img-3-mob.jpg 1x, ./images/port-img-3-mob-2x.jpg 2x" 
-                  media="(min-width: 768px)"
+                  media="(min-width: 320px)"
                   />
                   <img
                   class="features-image"
                   src="./images/port-img-3.jpg"
-                  alt="Banking App"
+                  alt="Meditation App"
                   width="360"
                   height="300"
                 />
@@ -600,12 +600,12 @@
                   media="(min-width: 768px)"
                   />
                   <source srcset="./images/port-img-4-mob.jpg 1x, ./images/port-img-4-mob-2x.jpg 2x" 
-                  media="(min-width: 768px)"
+                  media="(min-width: 320px)"
                   />
                   <img
                   class="features-image"
                   src="./images/port-img-4.jpg"
-                  alt="Banking App"
+                  alt="Taxi Service"
                   width="360"
                   height="300"
                 />
@@ -632,12 +632,12 @@
                   media="(min-width: 768px)"
                   />
                   <source srcset="./images/port-img-5-mob.jpg 1x, ./images/port-img-5-mob-2x.jpg 2x" 
-                  media="(min-width: 768px)"
+                  media="(min-width: 320px)"
                   />
                   <img
                   class="features-image"
                   src="./images/port-img-5.jpg"
-                  alt="Banking App"
+                  alt="Screen Illustrations"
                   width="360"
                   height="300"
                 />
@@ -664,12 +664,12 @@
                   media="(min-width: 768px)"
                   />
                   <source srcset="./images/port-img-6-mob.jpg 1x, ./images/port-img-6-mob-2x.jpg 2x" 
-                  media="(min-width: 768px)"
+                  media="(min-width: 320px)"
                   />
                   <img
                   class="features-image"
                   src="./images/port-img-6.jpg"
-                  alt="Banking App"
+                  alt="Online Courses"
                   width="360"
                   height="300"
                 />
