--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <nav class="open-mob-menu">
           <ul class="mob-menu-ul">
               <li class="mob-menu-list">
-                <a class="mob-menu-link" href="./index.html">Studio</a>
+                <a class="mob-menu-link color-menu" href="./index.html">Studio</a>
               </li>
               <li class="mob-menu-list">
                 <a class="mob-menu-link" href="">Portfolio</a>
@@ -94,14 +94,14 @@
             <address class="mob-address">
               <ul class="address-mob-menu">
                 <li class="address-mob-list">
-                  <a class="address-mob-link" href="mailto:info@devstudio.com"
-                    >info@devstudio.com</a
-                  >
+                  <a class="address-mob-link color-tel" href="tel:+110001111111"
+                  >+11 (000) 111-11-11
+                  </a>
                 </li>
                 <li class="address-mob-list">
-                  <a class="address-mob-link" href="tel:+110001111111">
-                    +11 (000) 111-11-11
-                  </a>
+                  <a class="address-mob-link" href="mailto:info@devstudio.com"
+                    >info@devstudio.com
+                    </a>
                 </li>
               </ul>
             </address>
@@ -510,8 +510,8 @@
                   class="features-image"
                   src="./images/port-img-1.jpg"
                   alt="Banking App"
-                  width="360"
-                  height="300"
+                  width
+                  height
                 />
                 </picture>
                 
@@ -543,8 +543,8 @@
                   class="features-image"
                   src="./images/port-img-2.jpg"
                   alt="Cashless Payment"
-                  width="360"
-                  height="300"
+                  width
+                  height
                 />
                 </picture>
                 <p class="features-cover-text">
@@ -575,8 +575,8 @@
                   class="features-image"
                   src="./images/port-img-3.jpg"
                   alt="Meditation App"
-                  width="360"
-                  height="300"
+                  width
+                  height
                 />
                 </picture>
                 <p class="features-cover-text">
@@ -606,8 +606,8 @@
                   class="features-image"
                   src="./images/port-img-4.jpg"
                   alt="Taxi Service"
-                  width="360"
-                  height="300"
+                  width
+                  height
                 />
                 </picture>
                 <p class="features-cover-text">
@@ -628,7 +628,7 @@
                   <source srcset="./images/port-img-5.jpg 1x, ./images/port-img-5-desk-2x.jpg 2x" 
                   media="(min-width: 1158px)"
                   />
-                  <source srcset="./images/port-img-5-tab.jpg 1x, ./images/port-img-5-tab-2x.jpg 2x" 
+                  <source srcset="./images/port-img-5-tab.jpg 1x, ./images/port-img-5-desk-2x.jpg 2x" 
                   media="(min-width: 768px)"
                   />
                   <source srcset="./images/port-img-5-mob.jpg 1x, ./images/port-img-5-mob-2x.jpg 2x" 
@@ -638,8 +638,8 @@
                   class="features-image"
                   src="./images/port-img-5.jpg"
                   alt="Screen Illustrations"
-                  width="360"
-                  height="300"
+                  width
+                  height
                 />
                 </picture>
                 <p class="features-cover-text">
@@ -670,8 +670,8 @@
                   class="features-image"
                   src="./images/port-img-6.jpg"
                   alt="Online Courses"
-                  width="360"
-                  height="300"
+                  width
+                  height
                 />
                 </picture>
                 <p class="features-cover-text">
